fix: fixed katex tag alignments
Also added support for `$` math delimiters that aren't handled by
Org (these can occur sometimes).

--- a/styles/index.css
+++ b/styles/index.css
@@ -103,6 +103,5 @@ bold {
     max-width: 90vw;
 }
 .katex-display > .katex > .katex-html > .tag {
-    position: relative;
-    right: 0;
+    @apply !relative xl:!absolute !-right-[5rem] xl:!right-[1rem]
 }
